<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="textHandler"
            type="com.vpaliy.espressoinaction.presentation.ui.fragment.CoffeeOrderFragment.DataTextHandler"/>
        <variable
            name="dayHandler"
            type="com.vpaliy.espressoinaction.presentation.ui.fragment.CoffeeOrderFragment.OnPropertyClicked" />
        <variable
            name="timeHandler"
            type="com.vpaliy.espressoinaction.presentation.ui.fragment.CoffeeOrderFragment.OnPropertyClicked"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/root"
        android:paddingBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_one"
            style="@style/Widget.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="@dimen/spacing_big"
            android:text="@string/day_to_pick_up_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <TextView
            android:id="@+id/txt_label_time"
            style="@style/Widget.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_huge"
            android:text="@string/time_to_pick_up_label"
            app:layout_constraintLeft_toLeftOf="@+id/label_one"
            app:layout_constraintTop_toBottomOf="@+id/today_day"
            />

        <TextView
            android:id="@+id/today_day"
            style="@style/Widget.DateTime"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:layout_marginRight="@dimen/spacing_medium"
            android:layout_marginTop="16dp"
            android:onClick="@{dayHandler::onClick}"
            tools:text="Today\n02"
            android:text="@{textHandler.setText(0,3)}"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tomorrow_day"
            app:layout_constraintTop_toBottomOf="@+id/label_one"
            />

        <TextView
            android:id="@+id/tomorrow_day"
            style="@style/Widget.DateTime"
            tools:text="Tomorrow\n03"
            android:text="@{textHandler.setText(1,3)}"
            android:onClick="@{dayHandler::onClick}"
            app:layout_constraintBottom_toBottomOf="@+id/today_day"
            app:layout_constraintLeft_toRightOf="@+id/today_day"
            app:layout_constraintRight_toLeftOf="@+id/third_day"
            app:layout_constraintTop_toTopOf="@+id/today_day"
            />
        <TextView
            android:id="@+id/third_day"
            style="@style/Widget.DateTime"
            android:layout_marginLeft="@dimen/spacing_medium"
            android:layout_marginStart="@dimen/spacing_medium"
            tools:text="Thursday\n04"
            android:text="@{textHandler.setText(2,3)}"
            android:onClick="@{dayHandler::onClick}"
            app:layout_constraintBottom_toBottomOf="@+id/tomorrow_day"
            app:layout_constraintLeft_toRightOf="@+id/tomorrow_day"
            app:layout_constraintRight_toLeftOf="@+id/fourth_day"
            app:layout_constraintTop_toTopOf="@+id/tomorrow_day"
            />
        <TextView
            android:id="@+id/fourth_day"
            style="@style/Widget.DateTime"
            android:layout_marginLeft="@dimen/spacing_medium"
            android:layout_marginStart="@dimen/spacing_medium"
            tools:text="Friday\n05"
            android:text="@{textHandler.setText(3,3)}"
            android:onClick="@{dayHandler::onClick}"
            app:layout_constraintBottom_toBottomOf="@+id/third_day"
            app:layout_constraintLeft_toRightOf="@+id/third_day"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/third_day"
            />
        <TextView
            android:id="@+id/time_frame_two"
            style="@style/Widget.DateTime"
            tools:text="@string/twelve_to_three_label"
            android:onClick="@{timeHandler::onClick}"
            android:text="@{textHandler.setText(@string/twelve_to_three_label,4)}"
            app:layout_constraintBottom_toBottomOf="@+id/time_frame_one"
            app:layout_constraintLeft_toRightOf="@+id/time_frame_one"
            app:layout_constraintRight_toLeftOf="@+id/time_frame_three"
            app:layout_constraintTop_toTopOf="@+id/time_frame_one"
            />
        <TextView
            android:id="@+id/time_frame_three"
            style="@style/Widget.DateTime"
            android:layout_marginLeft="@dimen/spacing_medium"
            tools:text="@string/three_to_five_label"
            android:onClick="@{timeHandler::onClick}"
            android:text="@{textHandler.setText(@string/three_to_five_label,3)}"
            app:layout_constraintBottom_toBottomOf="@+id/time_frame_two"
            app:layout_constraintLeft_toRightOf="@+id/time_frame_two"
            app:layout_constraintRight_toLeftOf="@+id/time_frame_four"
            app:layout_constraintTop_toTopOf="@+id/time_frame_two"
            app:layout_constraintVertical_bias="0.0" />
        <TextView
            android:id="@+id/time_frame_four"
            style="@style/Widget.DateTime"
            android:layout_marginLeft="@dimen/spacing_medium"
            tools:text="@string/five_to_nine_label"
            android:onClick="@{timeHandler::onClick}"
            android:text="@{textHandler.setText(@string/five_to_nine_label,3)}"
            app:layout_constraintBottom_toBottomOf="@+id/time_frame_three"
            app:layout_constraintLeft_toRightOf="@+id/time_frame_three"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/time_frame_three"
            />
        <TextView
            android:id="@+id/time_frame_one"
            style="@style/Widget.DateTime"
            android:layout_marginRight="@dimen/spacing_medium"
            android:layout_marginTop="16dp"
            tools:text="@string/nine_to_twelve_label"
            android:text="@{textHandler.setText(@string/nine_to_twelve_label,4)}"
            android:onClick="@{timeHandler::onClick}"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/time_frame_two"
            app:layout_constraintTop_toBottomOf="@+id/txt_label_time"
            />
    </android.support.constraint.ConstraintLayout>
</layout>